# Geode-Serial-Writer

./: CMakeLists.txt  README.md  about.md  mod.json
src/: main.cpp
src/nodes/: SerialNode.cpp  SerialNode.hpp
src/simple-serial-port/: SimpleSerial.cpp  sytax_config.txt
